2014-02-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

        * operation/agentes/status_monitor.php: Fixed tag combo,
        now only shows user tags not all.

2014-02-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_tags.php: Fixed several bugs with
        ACL propagation and ACL tags.

	* include/functions_graph.php: Implemented ACL tags in
	graph_event_module function.

2014-02-12  Sergio Martin <sergio.martin@artica.es>

	* mobile/operation/events.php: Fix order of the event 
	list on mobile console.

2014-02-11  Sergio Martin <sergio.martin@artica.es>

	* mobile/operation/events.php: Inverse the order
	of the shown events to show them from newer to older

2014-02-11  Sergio Martin <sergio.martin@artica.es>

	* mobile/index.php
	mobile/operation/tactical.php
	mobile/operation/home.php: Change the tactical 
	view to load dinamically the graph to be adapted
	to the layout when change device orientation. Fix
	id_user info on title

2014-02-11  Sergio Martin <sergio.martin@artica.es>

	* mobile/operation/agent.php
	mobile/operation/events.php
	mobile/operation/home.php
	mobile/operation/modules.php
	mobile/operation/alerts.php
	mobile/include/style/main.css: Improve user feedback
	with warnings when no modules or events found, and
	drawing in the header the id user logged (only in home
	screen)

2014-02-10  Sergio Martin <sergio.martin@artica.es>

	* mobile/include/style/main.css: Fix ugly close dialog
	button

2014-02-10  Sergio Martin <sergio.martin@artica.es>

	* mobile/include/style/main.css
	mobile/index.php
	mobile/operation/visualmap.php
	mobile/operation/tactical.php
	mobile/operation/module_graph.php
	mobile/operation/modules.php
	mobile/operation/agent.php: More improvements on
	visual styles in mobile console. Layouts, adaption
	of graphs dinamically to the screen using ajax, etc.

2014-02-10  Sergio Martin <sergio.martin@artica.es>

	* mobile/operation/agents.php
	mobile/operation/events.php
	mobile/include/style/main.css